--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image"  content="%PUBLIC_URL%/avatar-preview.png" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="My profile preview page for dear followers. Contains useful links and some awesome stuff."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
